<?xml version="1.0" encoding="utf-8" ?>
<resources>
    <string name="app_name">I am Speed</string>
    <string name="grant_location_permission">Grant location permission</string>
    <string name="grant_fine_location_permission">Grant fine location permission</string>
    <string name="enable_location">Enable location</string>
    <string name="enable_gps">Enable GPS (high accuracy location)</string>
    
    <string name="notification_channel_id">1</string>
    <string name="notification_channel_name">Speedometer notification channel</string>
    <string name="notification_channel_description">Notification shown when speedometer is active</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="about_title">About I am Speed</string>

    <string name="preference_light_dark">Light/Dark theme</string>
    <string name="preference_speed_unit">Speed unit</string>
    <string name="gps_update_interval">GPS update interval</string>

    <string name="about">
        I am Speed v%s<br />\n
        https://www.ViliusSutkus89.com/i-am-speed<br />\n<br />\n

        Privacy policy<br/>\n<br/>\n
        I am Speed does not collect or share any user data.<br/>\n<br/>\n

        Licence<br/>\n<br/>\n
        I am Speed is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3, as published by the Free Software Foundation.<br/>\n
        This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.<br/>\n
        A copy of the GNU General Public License version 3 is available at https://www.gnu.org/licenses .<br/>\n<br/>\n

        Let\'s Go Digital Font<br/>\n<br/>\n
        By WLM Fonts (Wolf Lambert)<br/>\n
        https://www.fontsc.com/font/lets-go-digital
    </string>
    <string name="stop">Stop</string>
    <string name="failed_to_open_location_settings">Failed to open location settings</string>

    <string name="start_iamspeed">Start I am Speed</string>
    <string name="waiting_for_signal">Waiting for signal</string>
    <string name="menu_stop">Stop</string>
    <string name="satellite_count">Satellites: %d/%d</string>
    <string name="accuracy">Accuracy: %s</string>
    <string name="menu_hud">Heads-Up Display</string>
    <string name="menu_pip">Enter Picture-in-Picture mode</string>
    <string name="hud_mirror">Mirror text vertically in Heads-Up Display</string>
    <string name="alert_window_permission_rationale">Permission to draw over other apps is required to enter Picture-in-Picture mode.</string>
</resources>
