<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/pip"
        android:icon="@drawable/ic_baseline_picture_in_picture_24"
        android:title="@string/menu_pip"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/hud"
        android:icon="@drawable/ic_outline_approval_24"
        android:title="@string/menu_hud"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/stop"
        android:icon="@drawable/ic_outline_stop_circle_24"
        android:title="@string/menu_stop"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/menu_settings"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/about"
        android:icon="@drawable/ic_about"
        android:title="@string/menu_about"
        app:showAsAction="ifRoom" />
</menu>
