<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph.xml"
    app:startDestination="@id/IamSpeedFragment">

    <fragment
        android:id="@+id/IamSpeedFragment"
        android:name="com.viliussutkus89.iamspeed.ui.IamSpeedFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_iam_speed">
        <action
            android:id="@+id/action_IamSpeedFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_IamSpeedFragment_to_aboutFragment"
            app:destination="@id/aboutFragment" />
        <action
            android:id="@+id/action_IamSpeedFragment_to_hudFragment"
            app:destination="@id/hudFragment" />
    </fragment>

    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.viliussutkus89.iamspeed.ui.AboutFragment"
        android:label="@string/about_title"
        tools:layout="@layout/fragment_about">
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.viliussutkus89.iamspeed.ui.SettingsFragment"
        android:label="@string/menu_settings" />

    <fragment
        android:id="@+id/hudFragment"
        android:name="com.viliussutkus89.iamspeed.ui.HudFragment"
        tools:layout="@layout/fragment_hud" />
</navigation>
